--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="ThatSong">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript,Soundcloud,Music,Chrome,Extension">
+    <meta name="author" content="Carl Corsini">
+    <meta property="og:image" content="https://i.imgur.com/CyXMJIl.png">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
