--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="ThatSong">
+    <meta name="og:description" content="Dj's Best Friend :)">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,Soundcloud,Music,Chrome,Extension">
     <meta name="author" content="Carl Corsini">
     <meta property="og:image" content="https://i.imgur.com/CyXMJIl.png">
